<resources>
    <string name="app_name">              TP4</string>
    <string name="a">2350 Av. du Colisée, Québec, QC G1L 5A1, 555–993–1233</string>
    <string name="b">connexion</string>
    <string name="c">inscription</string>
    <string name="d">authentification</string>
    <string name="email">email</string>
    <string name="pw">mot de passe</string>
    <string name="conexnion">connexion</string>
    <string name="crercinote">créer compte</string>
    <string name="newuser">Nouveaux user??c</string>
    <string name="nom">nom</string>
    <string name="adres">adresse</string>
    <string name="tel">téléphone</string>
    <string name="todo">TODO</string>
    <string name="inscription">Inscription</string>
    <string name="connexion">Connexion</string>
    <string name="_76_rue_chaumas">76 rue Chaumas</string>
    <string name="papa_john_s_pizza">Papa John\'s Pizza</string>
    <string name="_481_666_6666">481 666-6666</string>
    <string name="accueil">Accueil</string>
    <string name="upda">update</string>
    <string name="total_price">Total price:</string>
    <string name="utiliser_vos_points">Utiliser vos Points?</string>
    <string name="total_avec_points">Total avec points :</string>
    <string name="vous_conomisez">Vous économisez :</string>
    <string name="payer">Payer</string>
    <string name="prix">prix</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
</resources>